; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/wiiuse/extr_wpad.c___wpad_disconnectCB.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/wiiuse/extr_wpad.c___wpad_disconnectCB.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32* }
%struct.bd_addr = type { i32 }

@__wpads_inited = common dso_local global i64 0, align 8
@WPAD_STATE_ENABLED = common dso_local global i64 0, align 8
@__wpad_devs = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@DISCONNECT_BATTERY_DIED = common dso_local global i64 0, align 8
@DISCONNECT_POWER_OFF = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__wpad_disconnectCB(%struct.bd_addr* %0, i64 %1) #0 {
  %3 = alloca %struct.bd_addr*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.bd_addr, align 4
  %6 = alloca i32, align 4
  store %struct.bd_addr* %0, %struct.bd_addr** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i64, i64* @__wpads_inited, align 8
  %8 = load i64, i64* @WPAD_STATE_ENABLED, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %91

10:                                               ; preds = %2
  store i32 0, i32* %6, align 4
  br label %11

11:                                               ; preds = %87, %10
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @__wpad_devs, i32 0, i32 0), align 8
  %14 = icmp slt i32 %12, %13
  br i1 %14, label %15, label %90

15:                                               ; preds = %11
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @__wpad_devs, i32 0, i32 1), align 8
  %17 = load i32, i32* %6, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i64 %18
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 5
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @__wpad_devs, i32 0, i32 1), align 8
  %25 = load i32, i32* %6, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i64 %26
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  %29 = load i32*, i32** %28, align 8
  %30 = getelementptr inbounds i32, i32* %29, i64 4
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @__wpad_devs, i32 0, i32 1), align 8
  %33 = load i32, i32* %6, align 4
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i64 %34
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 0
  %37 = load i32*, i32** %36, align 8
  %38 = getelementptr inbounds i32, i32* %37, i64 3
  %39 = load i32, i32* %38, align 4
  %40 = load %struct.TYPE_3__*, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @__wpad_devs, i32 0, i32 1), align 8
  %41 = load i32, i32* %6, align 4
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i64 %42
  %44 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %43, i32 0, i32 0
  %45 = load i32*, i32** %44, align 8
  %46 = getelementptr inbounds i32, i32* %45, i64 2
  %47 = load i32, i32* %46, align 4
  %48 = load %struct.TYPE_3__*, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @__wpad_devs, i32 0, i32 1), align 8
  %49 = load i32, i32* %6, align 4
  %50 = sext i32 %49 to i64
  %51 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %48, i64 %50
  %52 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %51, i32 0, i32 0
  %53 = load i32*, i32** %52, align 8
  %54 = getelementptr inbounds i32, i32* %53, i64 1
  %55 = load i32, i32* %54, align 4
  %56 = load %struct.TYPE_3__*, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @__wpad_devs, i32 0, i32 1), align 8
  %57 = load i32, i32* %6, align 4
  %58 = sext i32 %57 to i64
  %59 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %56, i64 %58
  %60 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %59, i32 0, i32 0
  %61 = load i32*, i32** %60, align 8
  %62 = getelementptr inbounds i32, i32* %61, i64 0
  %63 = load i32, i32* %62, align 4
  %64 = call i32 @BD_ADDR(%struct.bd_addr* %5, i32 %23, i32 %31, i32 %39, i32 %47, i32 %55, i32 %63)
  %65 = load %struct.bd_addr*, %struct.bd_addr** %3, align 8
  %66 = call i64 @bd_addr_cmp(%struct.bd_addr* %65, %struct.bd_addr* %5)
  %67 = icmp ne i64 %66, 0
  br i1 %67, label %68, label %86

68:                                               ; preds = %15
  %69 = load i64, i64* %4, align 8
  %70 = load i64, i64* @DISCONNECT_BATTERY_DIED, align 8
  %71 = icmp eq i64 %69, %70
  br i1 %71, label %72, label %77

72:                                               ; preds = %68
  br i1 true, label %73, label %76

73:                                               ; preds = %72
  %74 = load i32, i32* %6, align 4
  %75 = call i32 @__wpad_batcb(i32 %74)
  br label %76

76:                                               ; preds = %73, %72
  br label %85

77:                                               ; preds = %68
  %78 = load i64, i64* %4, align 8
  %79 = load i64, i64* @DISCONNECT_POWER_OFF, align 8
  %80 = icmp eq i64 %78, %79
  br i1 %80, label %81, label %84

81:                                               ; preds = %77
  %82 = load i32, i32* %6, align 4
  %83 = call i32 @__wpad_powcb(i32 %82)
  br label %84

84:                                               ; preds = %81, %77
  br label %85

85:                                               ; preds = %84, %76
  br label %90

86:                                               ; preds = %15
  br label %87

87:                                               ; preds = %86
  %88 = load i32, i32* %6, align 4
  %89 = add nsw i32 %88, 1
  store i32 %89, i32* %6, align 4
  br label %11

90:                                               ; preds = %85, %11
  br label %91

91:                                               ; preds = %90, %2
  ret void
}

declare dso_local i32 @BD_ADDR(%struct.bd_addr*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i64 @bd_addr_cmp(%struct.bd_addr*, %struct.bd_addr*) #1

declare dso_local i32 @__wpad_batcb(i32) #1

declare dso_local i32 @__wpad_powcb(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
